# toolbox

./: .clang-format  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/core/: ratio_to_string.hpp  to_string.hpp
examples/: CMakeLists.txt
examples/src/: generator.cpp  si.cpp  si_unit_demo.cpp  unit.cpp  unit_demo.cpp
include/: color.hpp  math_constants.hpp  math_utils.hpp  matrix2d.hpp  sample_generator.hpp  sampling_utils.hpp  vector2d.hpp
include/si/: common_units.hpp  unit.hpp
include/units/: distance.hpp  duration.hpp  quantity.hpp  ratio_to_string.hpp  si_unit.hpp  si_units.hpp  unit.hpp
src/: bla.cpp
unit/: CMakeLists.txt
unit/include/unit/: quantity.hpp  si_units.hpp  unit.hpp
unit/src/: quantity.cpp
